2003-10-20  Dan Espen  <dane@mk.telcordia.com>

	* download/index.php: Remove download alpha releases link, out of date.

2003-10-11  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php:
	fixed name of Felix Wiemann - double n was missing

2003-10-11  Mikhael Goikhman  <migo@homemail.com>

	* definitions.inc:
	increased to 2.4.17

	* authors/authors_template.php_:
	fixed link (added "echo")

	* authors/index.php:
	* news/index.php:
	* faq/index.php:
	regenerated

2003-10-04  Uwe Pross  <uwe.pross@gmx.net>

	* web-theme/themes/voting_theme.inc: 
	* logo-competition/logos/color_select.inc:
	* logo-competition/logos/voting/index.php:
	fixed minor bugs in color change functionality
	
	* web-theme/classes/default_class.inc:
	added specification of cell width border cells

2003-09-30  Uwe Pross  <uwe.pross@gmx.net>

	* screenshots/desktops/Klaus_Umbach-1280x1024/*:
	added screenshot
	
2003-09-28  Uwe Pross  <uwe.pross@gmx.net>

	* navgen_write/navigation.inc
	regenerated navgiation array
		
	* index.php: 
	fixed link in quick jump list to desktop screenshots

	* screenshots/desktops/index.php: 
	changed link name to "Desktop Screenshots"

	* definitions.inc: 
	removed protest page against software patents.

2003-09-03  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/index.php: 
	* logo-competition/rules.php: 
	* index.php: 
	Updated announcement of voting period.
	
	* logo-competition/logos/1000Sun/*:
	added logos

2003-08-29  Uwe Pross  <uwe.pross@gmx.net>

	* logo-competition/logos_new.php:
	* logo-competition/logos/Slava_Finkelsteyn/*:
	* logo-competition/logos/Gabriel_Feld/*:
	added logos

	* logo-competition/logos_new.php: 
	* logo-competition/logos/Keran/*: 
	* logo-competition/logos/Julien_Guertault/*:
	added logos

	* screenshots/desktops/<directories>/*
	* screenshots/classes/picture_page.inc: 
	fixed bug in navigation links

	* screenshots/index.php: 
	changed links to new desktop page

	* screenshots/desktops.php: 
	disabled page
