@@ -1,3 +1,8 @@
+2003-10-22  Uwe Pross  <uwe.pross@gmx.net>
+
+	* download/index.php: 
+	Changed package info of alpha/beta release to unstable release.
+
 2003-10-20  Dan Espen  <dane@mk.telcordia.com>
 
 	* download/index.php: Remove download alpha releases link, out of date.
